[package]
name = "settings-env"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.28"
syn = "2.0.18"
macros = { path = "macros"}
darling = "0.20.1"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
serde_json = "1.0.100"
askama = "0.12.1"
